Document VM required option for *QueryRunner classes in README